--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@typescript-eslint/parser": "^8.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.3",
