feat: implement api logic and some general config

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,6 +6,7 @@
     "module": "ESNext",
     "moduleResolution": "node",
     "composite": true,
+    "rootDir": ".",
   },
   "include": ["vite.config.ts"]
 }
