--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint **/*.{js,jsx,ts,tsx} --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint **/*.{js,jsx,ts,tsx} --report-unused-disable-directives --max-warnings 0 --fix",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.9",
     "@tanstack/react-query": "^5.60.5",
     "@typescript-eslint/parser": "^8.15.0",
     "md5": "^2.3.0",
